# AlphaDivergence

./: .gitignore  README.md  agents.md  render.yaml
backend/: .env.example  Dockerfile  pyproject.toml
backend/src/: main.py
backend/src/agents/: analyst.py  judge.py  listener.py
backend/src/services/: llm.py
backend/src/utils/: security.py
backend/tests/: test_analyst.py  test_listener.py  test_orchestration.py  test_security.py
frontend/: nginx.conf
frontend/src/: App.css  App.jsx
frontend/src/components/: Settings.jsx
